--- a/home/.tmuxline.conf
+++ b/home/.tmuxline.conf
@@ -1,1 +1,23 @@
-/Users/chris/.tmuxline.conf
+# This tmux statusbar config was created by tmuxline.vim
+# on Thu, 31 Jul 2014
+
+set -g status-justify "left"
+set -g status "on"
+set -g status-left-style "none"
+set -g message-command-style "fg=colour236,bg=colour103"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=colour103"
+set -g status-utf8 "on"
+set -g status-style "bg=colour236,none"
+set -g message-style "fg=colour236,bg=colour103"
+set -g pane-border-style "fg=colour239"
+set -g status-right-length "100"
+set -g status-left-length "100"
+setw -g window-status-activity-attr "none"
+setw -g window-status-activity-style "fg=colour103,bg=colour236,underscore"
+setw -g window-status-separator ""
+setw -g window-status-style "fg=colour103,bg=colour236,none"
+set -g status-left "#[fg=colour236,bg=colour103] #S #[fg=colour103,bg=colour236,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour239,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour253,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour103,bg=colour239,nobold,nounderscore,noitalics]#[fg=colour236,bg=colour103] #h "
+setw -g window-status-format "#[fg=colour103,bg=colour236] #I #[fg=colour103,bg=colour236] #W "
+setw -g window-status-current-format "#[fg=colour236,bg=colour103,nobold,nounderscore,noitalics]#[fg=colour236,bg=colour103] #I #[fg=colour236,bg=colour103] #W #[fg=colour103,bg=colour236,nobold,nounderscore,noitalics]"
