added shortcuts to visualize branch info

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -5,3 +5,7 @@
 	s = status
 	co = checkout
 	b = branch
+  # Log display from screencast, with train tracks.
+  l = log --graph --pretty=format':%C(yellow)%h%Cblue%d%Creset %s %C(white) %an, %ar%Creset'
+  # Alternate log display from Scott Chacon
+  lol = log --pretty=oneline --abbrev-commit --graph --decorate
