--- a/.homesickrc
+++ b/.homesickrc
@@ -6,7 +6,7 @@ installRvm
 installNvm
 installTheSilverSearcher
 
-/*UI*/
+#UI
 installFonts
 importTerminalColourScheme
 
@@ -23,12 +23,12 @@ def installZsh
 end
 
 def generateSshKey
-  /*https://help.github.com/articles/generating-ssh-keys/*/
+  #https://help.github.com/articles/generating-ssh-keys
   `ssh-add ~/.ssh/id_rsa` unless system 'cat ~/.ssh/id_rsa'
 end
 
 def installRvm
-  /*http://rvm.io/rvm/install*/
+  #http://rvm.io/rvm/install
   curl -sSL https://get.rvm.io | bash -s stable --ruby unless system 'which rvm'
 end
 
@@ -41,12 +41,12 @@ def installTheSilverSearcher
 end
 
 def installFonts
-  /*Download fonts from*/
-  /*https://github.com/Lokaltog/powerline-fonts/tree/master/SourceCodePro*/
-  /*you might need to copy them manually to /Library/Fonts and your name/Library/Fonts*/
+  #Download fonts from
+  #https://github.com/Lokaltog/powerline-fonts/tree/master/SourceCodePro
+  #you might need to copy them manually to /Library/Fonts and your name/Library/Fonts
 end
 
 def importTerminalColourScheme
-  /*~/jellybeans.terminal*/
-  /*Import profile in to terminal    */
+  #~/jellybeans.terminal
+  #Import profile in to terminal
 end
