--- a/.homesickrc
+++ b/.homesickrc
@@ -25,7 +25,7 @@ def installNvm
 end
 
 def installTheSilverSearcher
-  `brew install automake pkg-config xz && git clone https://github.com/ggreer/the_silver_searcher ag && cd ag && ./build.sh && sudo make install` unless system 'which ag'
+  `brew install the_silver_searcher` unless system 'which ag'
 end
 
 def installFonts
