--- a/.homesickrc
+++ b/.homesickrc
@@ -15,6 +15,8 @@ def installNvm
   unless system 'which nvm'
     puts 'Installing nvm'
     `curl https://raw.githubusercontent.com/creationix/nvm/v0.22.0/install.sh | bash`
+    `source ~/.bashrc`
+    `nvm install 0.10.35`
   end
 end
 
