--- a/.homesickrc
+++ b/.homesickrc
@@ -31,7 +31,7 @@ def installNvm
   #https://github.com/creationix/nvm
   unless system 'which nvm'
     puts 'Installing nvm'
-    `curl https://raw.githubusercontent.com/creationix/nvm/v0.22.0/install.sh | bash`
+    `brew install nvm`
     `source ~/.bashrc`
   end
 end
