corrected font installation check

--- a/.homesickrc
+++ b/.homesickrc
@@ -45,7 +45,7 @@ end
 
 def installFonts
   #https://github.com/powerline/fonts
-  unless system 'ls /Library/Fonts/SourceCodePro'
+  unless system 'ls /Library/Fonts/Sauce\ Code\ Powerline\ Bold.otf'
     puts 'Installing font'
     `curl -LOk https://github.com/powerline/fonts/archive/master.zip`
     `unzip -j "master.zip" "fonts-master/SourceCodePro\*" -d "/Library/Fonts"`
