--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -45,6 +45,14 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Smart pane switching with awareness of vim splits
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
 # Copy mode to vi keys
 setw -g mode-keys vi
 # Enter copy mode with Esc, copy select with v (visual), y yank, p paste
