update postgres version

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -26,3 +26,4 @@
   lg = log --graph --pretty=format':%C(yellow)%h%Cblue%d%Creset %s %C(white) %an, %ar%Creset'
   # Alternate log display from Scott Chacon
   lol = log --pretty=oneline --abbrev-commit --graph --decorate
+  f = commit --amend --reset-author --no-edit
