--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -1,5 +1,9 @@
 {
   "prettier.eslintIntegration": true,
   "prettier.requireConfig": true,
-  "coc.preferences.formatOnSaveFiletypes": ["css", "javascript", "json", "typescript"]
+  "coc.preferences.formatOnSaveFiletypes": ["css", "javascript", "json", "typescript"],
+
+  "tsserver.implicitProjectConfig.experimentalDecorators": true,
+  "tsserver.maxTsServerMemory": 8196,
+  "tsserver.enableJavascript": true
 }
