add custom diagnostic icons

--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -1,4 +1,8 @@
 {
+  "diagnostic.errorSign": "✘",
+  "diagnostic.warningSign": "⚠",
+  "diagnostic.infoSign": "ⓘ",
+
   "prettier.eslintIntegration": true,
   "prettier.requireConfig": true,
   "coc.preferences.formatOnSaveFiletypes": ["css", "javascript", "json", "typescript"],
