--- a/home/.config/nvim/coc-settings.json
+++ b/home/.config/nvim/coc-settings.json
@@ -5,6 +5,9 @@
 
   "prettier.eslintIntegration": true,
   "prettier.requireConfig": true,
+
+  "eslint.autoFixOnSave": true,
+
   "coc.preferences.formatOnSaveFiletypes": ["css", "javascript", "json", "typescript"],
 
   "tsserver.implicitProjectConfig.experimentalDecorators": true,
